Some whitespace balancing and resolved some print issues

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -53,3 +53,11 @@ html {
 .first-list-gap {
   margin-top: 0.5rem;
 }
+
+article ul {
+  padding-left: 0;
+}
+
+article.job {
+  padding-bottom: 1rem;
+}
